<resources>
    <string name="app_name">NoteIt</string>
    <string name="add_note">ADD NOTE</string>
    <string name="delete_note">DELETE NOTE</string>
    <string name="my_notes">My Notes</string>
    <string name="note_title">Note Title</string>
    <string name="date">16/09/2021, 6:42PM</string>

    <string name="note_category">Select Category:</string>

    <string-array name="notes_categories">
        <item name="select_category">select category</item>
        <item name="uncategorized">Uncategorized</item>
        <item name="daily_task">Daily Tasks</item>
        <item name="study">Study</item>
        <item name="private">Private</item>
        <item name="shopping">Shopping</item>
    </string-array>

    <string-array name="note_priorities">
        <item name="select_priority">none</item>
        <item name="high_priority">High priority</item>
        <item name="normal_priority">Normal priority</item>
        <item name="low_priority">Low priority</item>
    </string-array>

    <string name="text_add_note">Add Note</string>
    <string name="recent_item_txt">Recent</string>
    <string name="old_item_txt">Old</string>
    <string name="category_item_txt">Category</string>
    <string name="note_hint_text">This a is my note sometime back just want to revisit it to know what exactly what I wrote inside it. Lets try to opern it and check!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_note_title_text">Note Title</string>
    <string name="hnt_type_note_txt">Type note</string>
    <string name="btn_done_text">Done</string>
    <string name="btn_close_text">Close</string>
    <string name="note_tittle_text">Note Tittle</string>
    <string name="button_edit_text">Button Edit</string>
    <string name="close_text">Close</string>
    <string name="save_text">Save</string>
    <string name="tv_category_name">Category Name</string>
    <string name="delete_all_item">Delete Notes </string>
    <string name="btn_update_note_text">Update</string>
    <string name="hide_private">Hide Private</string>
    <string name="show_all_item">Show All</string>
    <string name="item_share_text">Share</string>
    <string name="item_list_notes">List Notes</string>
    <string name="item_list_show_categories">Show Categories</string>
    <string name="hint_enter_title">Enter title</string>
    <string name="tv_placeholder_daily_tasks">Daily Tasks</string>
    <string name="delete_label">Delete</string>
    <string name="actionSearch">Search</string>
    <string name="ti_enter_title_hnt">Enter title</string>
    <string name="category_study">Study</string>
    <string name="category_daily_task">Daily Tasks</string>
    <string name="category_private">Private</string>
    <string name="categry_shopping">Shopping</string>
    <string name="tv_categories_label">Categories</string>
    <string name="view_color_cdesc">Note category color</string>
    <string name="tab_favorite_label">Favorite</string>
    <string name="tab_reminders_label">Reminders</string>
    <string name="tab_all_notes_label">All Notes</string>
    <string name="favorite_label">Favorite</string>
    <string name="select_priority">Priority</string>
    <string name="add_reminder_label">Add Reminder</string>
    <string name="new_note_label">New Note</string>
    <string name="note_category_label">Note Category</string>
    <string name="update_note_label">Update Note</string>
    <string name="add_reminder_title_label">Add Reminder</string>
    <string name="tv_notes_empty_label">No notes yet!</string>
    <string name="favorite_content_description">Add or remove from favorite</string>
    <string name="select_color_label">Select Category Color</string>
    <string name="categories_empty_label">Nothing to show</string>
    <string name="all_note_args_key">all_notes</string>
    <string name="reminders_args_key">reminders</string>
    <string name="favorites_args_key">favorites</string>
    <string name="reminder_time_label">Reminder:</string>
    <string name="note_title_arg_key">noteTitle</string>
    <string name="note_category_arg_key">noteCategory</string>
    <string name="editor_label">Editor</string>
    <string name="reminder_label">Reminder</string>
    <string name="title_label">Title</string>
    <string name="set_reminder_label">Set Reminder</string>
    <string name="error_category_empty">Category cannot be blank</string>
    <string name="hint_description_label">Description</string>
    <string name="fab_new_note_cd">Add new note to current category</string>
    <string name="add_category_label">Add Category</string>
    <string name="add_note_label">Add Note</string>
    <string name="message_key">message</string>
    <string name="title_key">title</string>
    <string name="img_new_category_cdesc">Add new category</string>
    <string name="delete_category_dialog_label">Want to delete %1$s category?</string>
    <string name="delete_note_dialog_label">Want to delete %1$s note?</string>

    <string-array name="notes_tabs">
        <item>All Notes</item>
        <item>Reminders</item>
        <item>Favorites</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_category_hint_label">Enter Category</string>
    <string name="no_reminder_set_label">Nothing Set</string>
    <string name="delete_all_notes_label">Do you want to delete all notes?</string>
    <string name="delete_category_label">Delete Category</string>
    <string name="search_query_hint">search in categories</string>
    <string name="delete_category_cdsc">Delete image content description</string>
    <string name="delete_all_notes_desc_label">Deleting this category will delete the notes within it!</string>
    <string name="choose_color_label">Please choose a color to proceed</string>
    <string name="remove_all_notes_label">This will removing all notes saved</string>
    <string name="note_deleted_label">%1$s deleted successfully</string>
    <string name="empty_reminder_label">No reminder note yet!</string>
    <string name="empty_favorites_label">No favorite note yet!</string>

</resources>
