<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:title="@string/update_note_label"
            android:id="@+id/updateNote"
            android:icon="@drawable/ic_edit"
            app:showAsAction="always" />
    <item
            android:title="@string/favorite_label"
            android:id="@+id/actionAddToFavorite"
            android:icon="@drawable/check_favourite"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
    <item
            android:title="@string/delete_label"
            android:id="@+id/actionDelete"
            android:icon="@drawable/ic_delete"
            />
    <item
            android:title="@string/item_share_text"
            android:id="@+id/shareNote"
            android:icon="@drawable/ic_share"
            />

</menu>