<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_5"
    app:cardCornerRadius="@dimen/dp_10"
    app:cardElevation="@dimen/dp_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/categoryColor"
            android:layout_width="@dimen/dp_8"
            android:layout_height="@dimen/dp_0"
            android:background="@drawable/color_uncategorized"
            android:contentDescription="@string/view_color_cdesc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5"
            android:text="@string/date"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/btnFavorite"
            app:layout_constraintStart_toStartOf="@+id/txtNotes"
            app:layout_constraintTop_toTopOf="@+id/btnFavorite" />

        <TextView
            android:id="@+id/tvNoteTitle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="@dimen/dp_5"
            android:paddingEnd="@dimen/dp_5"
            android:text="@string/note_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/categoryColor"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<ImageButton
                android:id="@+id/delete_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvNoteTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_delete"
                android:padding="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_5"
                android:visibility="gone"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/tvNoteTitle" />
-->
        <TextView
            android:id="@+id/txtNotes"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginEnd="@dimen/dp_5"
            android:ellipsize="end"
            android:hint="@string/note_hint_text"
            android:maxLines="3"
            app:hintTextColor="#78909C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/categoryColor"
            app:layout_constraintTop_toBottomOf="@+id/tvNoteTitle"
            tools:text="@string/note_hint_text" />

        <ImageButton
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favorite_content_description"
            android:padding="@dimen/dp_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNotes"
            app:srcCompat="@drawable/favorite_selector"
            app:tint="#AD000000" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
