<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/svUpdateNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:focusable="true"
        tools:context=".ui.update.UpdateNoteFragment">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/updateNoteToolbar"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            app:titleCentered="false"
            app:title="@string/update_note_label"
            app:menu="@menu/new_note_menu"
            android:theme="@style/ToolbarStyle"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clUpdateNote"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateNoteToolbar">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateTitleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:hint="@string/hint_enter_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menuCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/note_category">

            <AutoCompleteTextView
                    android:id="@+id/updateNoteCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:labelFor="@id/updateNoteCategory"
                    android:configChanges="orientation" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/menuCategory"
                android:id="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/updateTextEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hnt_type_note_txt"
                    android:lines="13"
                    android:gravity="start"
                    android:configChanges="orientation" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>